--- a/covid19reg.html
+++ b/covid19reg.html
@@ -632,6 +632,15 @@
 <script src=RegData_596.js></script>
 <script src=RegData_597.js></script>
 <script src=RegData_598.js></script>
+<script src=RegData_599.js></script>
+<script src=RegData_600.js></script>
+<script src=RegData_601.js></script>
+<script src=RegData_602.js></script>
+<script src=RegData_603.js></script>
+<script src=RegData_604.js></script>
+<script src=RegData_605.js></script>
+<script src=RegData_606.js></script>
+<script src=RegData_607.js></script>
 
 <script>
 
