--- a/covid19state.html
+++ b/covid19state.html
@@ -574,6 +574,15 @@
 <script src=USAData_596.js></script>
 <script src=USAData_597.js></script>
 <script src=USAData_598.js></script>
+<script src=USAData_599.js></script>
+<script src=USAData_600.js></script>
+<script src=USAData_601.js></script>
+<script src=USAData_602.js></script>
+<script src=USAData_603.js></script>
+<script src=USAData_604.js></script>
+<script src=USAData_605.js></script>
+<script src=USAData_606.js></script>
+<script src=USAData_607.js></script>
 
 <script>
 
