--- a/covid19usa.html
+++ b/covid19usa.html
@@ -597,6 +597,15 @@
 <script src=USAData_596.js></script>
 <script src=USAData_597.js></script>
 <script src=USAData_598.js></script>
+<script src=USAData_599.js></script>
+<script src=USAData_600.js></script>
+<script src=USAData_601.js></script>
+<script src=USAData_602.js></script>
+<script src=USAData_603.js></script>
+<script src=USAData_604.js></script>
+<script src=USAData_605.js></script>
+<script src=USAData_606.js></script>
+<script src=USAData_607.js></script>
 
 <script>
 
@@ -1744,7 +1753,7 @@ function XYChart(TopLeft, SizeXY, XEmphasis, XYLabels, ValueSeries1, ValueSeries
 		ctx.lineTo(TopLeft[0]+(XScale*x),TopLeft[1]+SizeXY[1]);
 		ctx.stroke();
 		ctx.lineWidth = 1;
-		if((x % 30) == 0)
+		if((x % 120) == 0)
 		{
 			ctx.globalAlpha = 1.0;
 			// ctx.strokeStyle = "black";
