Updated data to 11/24/2021 + vaxdata (two days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -641,6 +641,8 @@
 <script src=IntData_605.js></script>
 <script src=IntData_606.js></script>
 <script src=IntData_607.js></script>
+<script src=IntData_608.js></script>
+<script src=IntData_609.js></script>
 
 <script>
 
