--- a/covid19state.html
+++ b/covid19state.html
@@ -583,6 +583,8 @@
 <script src=USAData_605.js></script>
 <script src=USAData_606.js></script>
 <script src=USAData_607.js></script>
+<script src=USAData_608.js></script>
+<script src=USAData_609.js></script>
 
 <script>
 
