--- a/covid19reg.html
+++ b/covid19reg.html
@@ -641,6 +641,8 @@
 <script src=RegData_605.js></script>
 <script src=RegData_606.js></script>
 <script src=RegData_607.js></script>
+<script src=RegData_608.js></script>
+<script src=RegData_609.js></script>
 
 <script>
 
