Updated data to 11/29/2021 + vaxdata (four days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -645,6 +645,10 @@
 <script src=IntData_609.js></script>
 <script src=IntData_610.js></script>
 <script src=IntData_611.js></script>
+<script src=IntData_612.js></script>
+<script src=IntData_613.js></script>
+<script src=IntData_614.js></script>
+<script src=IntData_615.js></script>
 
 <script>
 
