--- a/covid19reg.html
+++ b/covid19reg.html
@@ -645,6 +645,10 @@
 <script src=RegData_609.js></script>
 <script src=RegData_610.js></script>
 <script src=RegData_611.js></script>
+<script src=RegData_612.js></script>
+<script src=RegData_613.js></script>
+<script src=RegData_614.js></script>
+<script src=RegData_615.js></script>
 
 <script>
 
