--- a/covid19state.html
+++ b/covid19state.html
@@ -587,6 +587,10 @@
 <script src=USAData_609.js></script>
 <script src=USAData_610.js></script>
 <script src=USAData_611.js></script>
+<script src=USAData_612.js></script>
+<script src=USAData_613.js></script>
+<script src=USAData_614.js></script>
+<script src=USAData_615.js></script>
 
 <script>
 
