Updated data to 12/03/2021 + vaxdata (four days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -649,6 +649,10 @@
 <script src=IntData_613.js></script>
 <script src=IntData_614.js></script>
 <script src=IntData_615.js></script>
+<script src=IntData_616.js></script>
+<script src=IntData_617.js></script>
+<script src=IntData_618.js></script>
+<script src=IntData_619.js></script>
 
 <script>
 
