--- a/covid19reg.html
+++ b/covid19reg.html
@@ -649,6 +649,10 @@
 <script src=RegData_613.js></script>
 <script src=RegData_614.js></script>
 <script src=RegData_615.js></script>
+<script src=RegData_616.js></script>
+<script src=RegData_617.js></script>
+<script src=RegData_618.js></script>
+<script src=RegData_619.js></script>
 
 <script>
 
