--- a/covid19state.html
+++ b/covid19state.html
@@ -591,6 +591,10 @@
 <script src=USAData_613.js></script>
 <script src=USAData_614.js></script>
 <script src=USAData_615.js></script>
+<script src=USAData_616.js></script>
+<script src=USAData_617.js></script>
+<script src=USAData_618.js></script>
+<script src=USAData_619.js></script>
 
 <script>
 
