Updated data to 12/08/2021 +  vaxdata (five days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -653,6 +653,11 @@
 <script src=IntData_617.js></script>
 <script src=IntData_618.js></script>
 <script src=IntData_619.js></script>
+<script src=IntData_620.js></script>
+<script src=IntData_621.js></script>
+<script src=IntData_622.js></script>
+<script src=IntData_623.js></script>
+<script src=IntData_624.js></script>
 
 <script>
 
