--- a/covid19state.html
+++ b/covid19state.html
@@ -595,6 +595,11 @@
 <script src=USAData_617.js></script>
 <script src=USAData_618.js></script>
 <script src=USAData_619.js></script>
+<script src=USAData_620.js></script>
+<script src=USAData_621.js></script>
+<script src=USAData_622.js></script>
+<script src=USAData_623.js></script>
+<script src=USAData_624.js></script>
 
 <script>
 
