--- a/covid19reg.html
+++ b/covid19reg.html
@@ -653,6 +653,11 @@
 <script src=RegData_617.js></script>
 <script src=RegData_618.js></script>
 <script src=RegData_619.js></script>
+<script src=RegData_620.js></script>
+<script src=RegData_621.js></script>
+<script src=RegData_622.js></script>
+<script src=RegData_623.js></script>
+<script src=RegData_624.js></script>
 
 <script>
 
