Updated data to 12/12/2021 + vaxdata (four days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -658,6 +658,10 @@
 <script src=IntData_622.js></script>
 <script src=IntData_623.js></script>
 <script src=IntData_624.js></script>
+<script src=IntData_625.js></script>
+<script src=IntData_626.js></script>
+<script src=IntData_627.js></script>
+<script src=IntData_628.js></script>
 
 <script>
 
