--- a/covid19reg.html
+++ b/covid19reg.html
@@ -658,6 +658,10 @@
 <script src=RegData_622.js></script>
 <script src=RegData_623.js></script>
 <script src=RegData_624.js></script>
+<script src=RegData_625.js></script>
+<script src=RegData_626.js></script>
+<script src=RegData_627.js></script>
+<script src=RegData_628.js></script>
 
 <script>
 
