--- a/covid19state.html
+++ b/covid19state.html
@@ -600,6 +600,10 @@
 <script src=USAData_622.js></script>
 <script src=USAData_623.js></script>
 <script src=USAData_624.js></script>
+<script src=USAData_625.js></script>
+<script src=USAData_626.js></script>
+<script src=USAData_627.js></script>
+<script src=USAData_628.js></script>
 
 <script>
 
