Updated data to 12/16/2021 + vaxdata (four days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -662,6 +662,10 @@
 <script src=IntData_626.js></script>
 <script src=IntData_627.js></script>
 <script src=IntData_628.js></script>
+<script src=IntData_629.js></script>
+<script src=IntData_630.js></script>
+<script src=IntData_631.js></script>
+<script src=IntData_632.js></script>
 
 <script>
 
