--- a/covid19reg.html
+++ b/covid19reg.html
@@ -662,6 +662,10 @@
 <script src=RegData_626.js></script>
 <script src=RegData_627.js></script>
 <script src=RegData_628.js></script>
+<script src=RegData_629.js></script>
+<script src=RegData_630.js></script>
+<script src=RegData_631.js></script>
+<script src=RegData_632.js></script>
 
 <script>
 
