--- a/covid19usa.html
+++ b/covid19usa.html
@@ -627,6 +627,10 @@
 <script src=USAData_626.js></script>
 <script src=USAData_627.js></script>
 <script src=USAData_628.js></script>
+<script src=USAData_629.js></script>
+<script src=USAData_630.js></script>
+<script src=USAData_631.js></script>
+<script src=USAData_632.js></script>
 
 <script>
 
