Updated data to 12/17/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -666,6 +666,7 @@
 <script src=IntData_630.js></script>
 <script src=IntData_631.js></script>
 <script src=IntData_632.js></script>
+<script src=IntData_633.js></script>
 
 <script>
 
