--- a/covid19reg.html
+++ b/covid19reg.html
@@ -666,6 +666,7 @@
 <script src=RegData_630.js></script>
 <script src=RegData_631.js></script>
 <script src=RegData_632.js></script>
+<script src=RegData_633.js></script>
 
 <script>
 
