--- a/covid19state.html
+++ b/covid19state.html
@@ -608,6 +608,7 @@
 <script src=USAData_630.js></script>
 <script src=USAData_631.js></script>
 <script src=USAData_632.js></script>
+<script src=USAData_633.js></script>
 
 <script>
 
