--- a/covid19usa.html
+++ b/covid19usa.html
@@ -631,6 +631,7 @@
 <script src=USAData_630.js></script>
 <script src=USAData_631.js></script>
 <script src=USAData_632.js></script>
+<script src=USAData_633.js></script>
 
 <script>
 
