Updated data to 12/18/2021 + vaxdata

--- a/covid19state.html
+++ b/covid19state.html
@@ -609,6 +609,7 @@
 <script src=USAData_631.js></script>
 <script src=USAData_632.js></script>
 <script src=USAData_633.js></script>
+<script src=USAData_634.js></script>
 
 <script>
 
