--- a/covid19int.html
+++ b/covid19int.html
@@ -667,6 +667,7 @@
 <script src=IntData_631.js></script>
 <script src=IntData_632.js></script>
 <script src=IntData_633.js></script>
+<script src=IntData_634.js></script>
 
 <script>
 
