--- a/covid19reg.html
+++ b/covid19reg.html
@@ -667,6 +667,7 @@
 <script src=RegData_631.js></script>
 <script src=RegData_632.js></script>
 <script src=RegData_633.js></script>
+<script src=RegData_634.js></script>
 
 <script>
 
