--- a/covid19usa.html
+++ b/covid19usa.html
@@ -632,6 +632,7 @@
 <script src=USAData_631.js></script>
 <script src=USAData_632.js></script>
 <script src=USAData_633.js></script>
+<script src=USAData_634.js></script>
 
 <script>
 
