--- a/covid19int.html
+++ b/covid19int.html
@@ -668,6 +668,7 @@
 <script src=IntData_632.js></script>
 <script src=IntData_633.js></script>
 <script src=IntData_634.js></script>
+<script src=IntData_635.js></script>
 
 <script>
 
