--- a/covid19reg.html
+++ b/covid19reg.html
@@ -668,6 +668,7 @@
 <script src=RegData_632.js></script>
 <script src=RegData_633.js></script>
 <script src=RegData_634.js></script>
+<script src=RegData_635.js></script>
 
 <script>
 
