--- a/covid19usa.html
+++ b/covid19usa.html
@@ -633,6 +633,7 @@
 <script src=USAData_632.js></script>
 <script src=USAData_633.js></script>
 <script src=USAData_634.js></script>
+<script src=USAData_635.js></script>
 
 <script>
 
