Updated to 12/20/2021 + vaxdata

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -634,6 +634,7 @@
 <script src=USAData_633.js></script>
 <script src=USAData_634.js></script>
 <script src=USAData_635.js></script>
+<script src=USAData_636.js></script>
 
 <script>
 
