--- a/covid19int.html
+++ b/covid19int.html
@@ -669,6 +669,7 @@
 <script src=IntData_633.js></script>
 <script src=IntData_634.js></script>
 <script src=IntData_635.js></script>
+<script src=IntData_636.js></script>
 
 <script>
 
