--- a/covid19reg.html
+++ b/covid19reg.html
@@ -669,6 +669,7 @@
 <script src=RegData_633.js></script>
 <script src=RegData_634.js></script>
 <script src=RegData_635.js></script>
+<script src=RegData_636.js></script>
 
 <script>
 
