--- a/covid19state.html
+++ b/covid19state.html
@@ -611,6 +611,7 @@
 <script src=USAData_633.js></script>
 <script src=USAData_634.js></script>
 <script src=USAData_635.js></script>
+<script src=USAData_636.js></script>
 
 <script>
 
