Updated data to 12/21/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -670,6 +670,7 @@
 <script src=IntData_634.js></script>
 <script src=IntData_635.js></script>
 <script src=IntData_636.js></script>
+<script src=IntData_637.js></script>
 
 <script>
 
