--- a/covid19reg.html
+++ b/covid19reg.html
@@ -670,6 +670,7 @@
 <script src=RegData_634.js></script>
 <script src=RegData_635.js></script>
 <script src=RegData_636.js></script>
+<script src=RegData_637.js></script>
 
 <script>
 
