--- a/covid19state.html
+++ b/covid19state.html
@@ -612,6 +612,7 @@
 <script src=USAData_634.js></script>
 <script src=USAData_635.js></script>
 <script src=USAData_636.js></script>
+<script src=USAData_637.js></script>
 
 <script>
 
