Updated data to 12/22/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -671,6 +671,7 @@
 <script src=RegData_635.js></script>
 <script src=RegData_636.js></script>
 <script src=RegData_637.js></script>
+<script src=RegData_638.js></script>
 
 <script>
 
