--- a/covid19usa.html
+++ b/covid19usa.html
@@ -636,6 +636,7 @@
 <script src=USAData_635.js></script>
 <script src=USAData_636.js></script>
 <script src=USAData_637.js></script>
+<script src=USAData_638.js></script>
 
 <script>
 
