--- a/covid19int.html
+++ b/covid19int.html
@@ -671,6 +671,7 @@
 <script src=IntData_635.js></script>
 <script src=IntData_636.js></script>
 <script src=IntData_637.js></script>
+<script src=IntData_638.js></script>
 
 <script>
 
