--- a/covid19int.html
+++ b/covid19int.html
@@ -672,6 +672,7 @@
 <script src=IntData_636.js></script>
 <script src=IntData_637.js></script>
 <script src=IntData_638.js></script>
+<script src=IntData_639.js></script>
 
 <script>
 
