--- a/covid19reg.html
+++ b/covid19reg.html
@@ -672,6 +672,7 @@
 <script src=RegData_636.js></script>
 <script src=RegData_637.js></script>
 <script src=RegData_638.js></script>
+<script src=RegData_639.js></script>
 
 <script>
 
