--- a/covid19usa.html
+++ b/covid19usa.html
@@ -637,6 +637,7 @@
 <script src=USAData_636.js></script>
 <script src=USAData_637.js></script>
 <script src=USAData_638.js></script>
+<script src=USAData_639.js></script>
 
 <script>
 
