Updated data to 12/24/2021 + vaxdata + added new USA maps for 10 day avg per-cap cases/deaths

--- a/covid19int.html
+++ b/covid19int.html
@@ -673,6 +673,7 @@
 <script src=IntData_637.js></script>
 <script src=IntData_638.js></script>
 <script src=IntData_639.js></script>
+<script src=IntData_640.js></script>
 
 <script>
 
