--- a/covid19reg.html
+++ b/covid19reg.html
@@ -673,6 +673,7 @@
 <script src=RegData_637.js></script>
 <script src=RegData_638.js></script>
 <script src=RegData_639.js></script>
+<script src=RegData_640.js></script>
 
 <script>
 
