--- a/covid19state.html
+++ b/covid19state.html
@@ -615,6 +615,7 @@
 <script src=USAData_637.js></script>
 <script src=USAData_638.js></script>
 <script src=USAData_639.js></script>
+<script src=USAData_640.js></script>
 
 <script>
 
