Updated data to 12/26/2021 + vaxdata

--- a/covid19state.html
+++ b/covid19state.html
@@ -617,6 +617,7 @@
 <script src=USAData_639.js></script>
 <script src=USAData_640.js></script>
 <script src=USAData_641.js></script>
+<script src=USAData_642.js></script>
 
 <script>
 
