--- a/covid19int.html
+++ b/covid19int.html
@@ -675,6 +675,7 @@
 <script src=IntData_639.js></script>
 <script src=IntData_640.js></script>
 <script src=IntData_641.js></script>
+<script src=IntData_642.js></script>
 
 <script>
 
