--- a/covid19reg.html
+++ b/covid19reg.html
@@ -675,6 +675,7 @@
 <script src=RegData_639.js></script>
 <script src=RegData_640.js></script>
 <script src=RegData_641.js></script>
+<script src=RegData_642.js></script>
 
 <script>
 
