Updated data to 12/27/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -676,6 +676,7 @@
 <script src=IntData_640.js></script>
 <script src=IntData_641.js></script>
 <script src=IntData_642.js></script>
+<script src=IntData_643.js></script>
 
 <script>
 
