--- a/covid19reg.html
+++ b/covid19reg.html
@@ -676,6 +676,7 @@
 <script src=RegData_640.js></script>
 <script src=RegData_641.js></script>
 <script src=RegData_642.js></script>
+<script src=RegData_643.js></script>
 
 <script>
 
