--- a/covid19usa.html
+++ b/covid19usa.html
@@ -641,6 +641,7 @@
 <script src=USAData_640.js></script>
 <script src=USAData_641.js></script>
 <script src=USAData_642.js></script>
+<script src=USAData_643.js></script>
 <script>
 
 var MinLat = 25;
