Updated data to 12/28/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -677,6 +677,7 @@
 <script src=RegData_641.js></script>
 <script src=RegData_642.js></script>
 <script src=RegData_643.js></script>
+<script src=RegData_644.js></script>
 
 <script>
 
