--- a/covid19int.html
+++ b/covid19int.html
@@ -677,6 +677,7 @@
 <script src=IntData_641.js></script>
 <script src=IntData_642.js></script>
 <script src=IntData_643.js></script>
+<script src=IntData_644.js></script>
 
 <script>
 
