--- a/covid19state.html
+++ b/covid19state.html
@@ -619,6 +619,7 @@
 <script src=USAData_641.js></script>
 <script src=USAData_642.js></script>
 <script src=USAData_643.js></script>
+<script src=USAData_644.js></script>
 
 <script>
 
