--- a/covid19usa.html
+++ b/covid19usa.html
@@ -642,6 +642,7 @@
 <script src=USAData_641.js></script>
 <script src=USAData_642.js></script>
 <script src=USAData_643.js></script>
+<script src=USAData_644.js></script>
 <script>
 
 var MinLat = 25;
