Updated data to 12/30/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -679,6 +679,7 @@
 <script src=IntData_643.js></script>
 <script src=IntData_644.js></script>
 <script src=IntData_645.js></script>
+<script src=IntData_646.js></script>
 
 <script>
 
