--- a/covid19reg.html
+++ b/covid19reg.html
@@ -679,6 +679,7 @@
 <script src=RegData_643.js></script>
 <script src=RegData_644.js></script>
 <script src=RegData_645.js></script>
+<script src=RegData_646.js></script>
 
 <script>
 
