--- a/covid19state.html
+++ b/covid19state.html
@@ -621,6 +621,7 @@
 <script src=USAData_643.js></script>
 <script src=USAData_644.js></script>
 <script src=USAData_645.js></script>
+<script src=USAData_646.js></script>
 
 <script>
 
