--- a/covid19usa.html
+++ b/covid19usa.html
@@ -644,6 +644,7 @@
 <script src=USAData_643.js></script>
 <script src=USAData_644.js></script>
 <script src=USAData_645.js></script>
+<script src=USAData_646.js></script>
 <script>
 
 var MinLat = 25;
