Updated data to 12/31/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -680,6 +680,7 @@
 <script src=RegData_644.js></script>
 <script src=RegData_645.js></script>
 <script src=RegData_646.js></script>
+<script src=RegData_647.js></script>
 
 <script>
 
