--- a/covid19int.html
+++ b/covid19int.html
@@ -680,6 +680,7 @@
 <script src=IntData_644.js></script>
 <script src=IntData_645.js></script>
 <script src=IntData_646.js></script>
+<script src=IntData_647.js></script>
 
 <script>
 
