--- a/covid19state.html
+++ b/covid19state.html
@@ -622,6 +622,7 @@
 <script src=USAData_644.js></script>
 <script src=USAData_645.js></script>
 <script src=USAData_646.js></script>
+<script src=USAData_647.js></script>
 
 <script>
 
