--- a/covid19usa.html
+++ b/covid19usa.html
@@ -645,6 +645,7 @@
 <script src=USAData_644.js></script>
 <script src=USAData_645.js></script>
 <script src=USAData_646.js></script>
+<script src=USAData_647.js></script>
 <script>
 
 var MinLat = 25;
