--- a/covid19int.html
+++ b/covid19int.html
@@ -681,6 +681,7 @@
 <script src=IntData_645.js></script>
 <script src=IntData_646.js></script>
 <script src=IntData_647.js></script>
+<script src=IntData_648.js></script>
 
 <script>
 
