--- a/covid19reg.html
+++ b/covid19reg.html
@@ -681,6 +681,7 @@
 <script src=RegData_645.js></script>
 <script src=RegData_646.js></script>
 <script src=RegData_647.js></script>
+<script src=RegData_648.js></script>
 
 <script>
 
