--- a/covid19state.html
+++ b/covid19state.html
@@ -623,6 +623,7 @@
 <script src=USAData_645.js></script>
 <script src=USAData_646.js></script>
 <script src=USAData_647.js></script>
+<script src=USAData_648.js></script>
 
 <script>
 
