Updated data to 01/02/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -682,6 +682,7 @@
 <script src=IntData_646.js></script>
 <script src=IntData_647.js></script>
 <script src=IntData_648.js></script>
+<script src=IntData_649.js></script>
 
 <script>
 
