--- a/covid19state.html
+++ b/covid19state.html
@@ -624,6 +624,7 @@
 <script src=USAData_646.js></script>
 <script src=USAData_647.js></script>
 <script src=USAData_648.js></script>
+<script src=USAData_649.js></script>
 
 <script>
 
