--- a/covid19reg.html
+++ b/covid19reg.html
@@ -682,6 +682,7 @@
 <script src=RegData_646.js></script>
 <script src=RegData_647.js></script>
 <script src=RegData_648.js></script>
+<script src=RegData_649.js></script>
 
 <script>
 
