--- a/covid19int.html
+++ b/covid19int.html
@@ -683,6 +683,7 @@
 <script src=IntData_647.js></script>
 <script src=IntData_648.js></script>
 <script src=IntData_649.js></script>
+<script src=IntData_650.js></script>
 
 <script>
 
