--- a/covid19reg.html
+++ b/covid19reg.html
@@ -683,6 +683,7 @@
 <script src=RegData_647.js></script>
 <script src=RegData_648.js></script>
 <script src=RegData_649.js></script>
+<script src=RegData_650.js></script>
 
 <script>
 
