--- a/covid19state.html
+++ b/covid19state.html
@@ -625,6 +625,7 @@
 <script src=USAData_647.js></script>
 <script src=USAData_648.js></script>
 <script src=USAData_649.js></script>
+<script src=USAData_650.js></script>
 
 <script>
 
