Updated data to 01/04/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -684,6 +684,7 @@
 <script src=RegData_648.js></script>
 <script src=RegData_649.js></script>
 <script src=RegData_650.js></script>
+<script src=RegData_651.js></script>
 
 <script>
 
