--- a/covid19int.html
+++ b/covid19int.html
@@ -684,6 +684,7 @@
 <script src=IntData_648.js></script>
 <script src=IntData_649.js></script>
 <script src=IntData_650.js></script>
+<script src=IntData_651.js></script>
 
 <script>
 
