Updated data to 01/05/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -685,6 +685,7 @@
 <script src=RegData_649.js></script>
 <script src=RegData_650.js></script>
 <script src=RegData_651.js></script>
+<script src=RegData_652.js></script>
 
 <script>
 
