--- a/covid19state.html
+++ b/covid19state.html
@@ -627,6 +627,7 @@
 <script src=USAData_649.js></script>
 <script src=USAData_650.js></script>
 <script src=USAData_651.js></script>
+<script src=USAData_652.js></script>
 
 <script>
 
