--- a/covid19int.html
+++ b/covid19int.html
@@ -685,6 +685,7 @@
 <script src=IntData_649.js></script>
 <script src=IntData_650.js></script>
 <script src=IntData_651.js></script>
+<script src=IntData_652.js></script>
 
 <script>
 
