--- a/covid19usa.html
+++ b/covid19usa.html
@@ -650,6 +650,7 @@
 <script src=USAData_649.js></script>
 <script src=USAData_650.js></script>
 <script src=USAData_651.js></script>
+<script src=USAData_652.js></script>
 <script>
 
 var MinLat = 25;
