Updated data to 01/06/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -686,6 +686,7 @@
 <script src=IntData_650.js></script>
 <script src=IntData_651.js></script>
 <script src=IntData_652.js></script>
+<script src=IntData_653.js></script>
 
 <script>
 
