--- a/covid19reg.html
+++ b/covid19reg.html
@@ -686,6 +686,7 @@
 <script src=RegData_650.js></script>
 <script src=RegData_651.js></script>
 <script src=RegData_652.js></script>
+<script src=RegData_653.js></script>
 
 <script>
 
