--- a/covid19state.html
+++ b/covid19state.html
@@ -628,6 +628,7 @@
 <script src=USAData_650.js></script>
 <script src=USAData_651.js></script>
 <script src=USAData_652.js></script>
+<script src=USAData_653.js></script>
 
 <script>
 
