Updated data to 01/17/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -687,6 +687,7 @@
 <script src=IntData_651.js></script>
 <script src=IntData_652.js></script>
 <script src=IntData_653.js></script>
+<script src=IntData_654.js></script>
 
 <script>
 
