--- a/covid19reg.html
+++ b/covid19reg.html
@@ -687,6 +687,7 @@
 <script src=RegData_651.js></script>
 <script src=RegData_652.js></script>
 <script src=RegData_653.js></script>
+<script src=RegData_654.js></script>
 
 <script>
 
