--- a/covid19state.html
+++ b/covid19state.html
@@ -629,6 +629,7 @@
 <script src=USAData_651.js></script>
 <script src=USAData_652.js></script>
 <script src=USAData_653.js></script>
+<script src=USAData_654.js></script>
 
 <script>
 
