Updated data to 01/08/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -688,6 +688,7 @@
 <script src=IntData_652.js></script>
 <script src=IntData_653.js></script>
 <script src=IntData_654.js></script>
+<script src=IntData_655.js></script>
 
 <script>
 
