--- a/covid19reg.html
+++ b/covid19reg.html
@@ -688,6 +688,7 @@
 <script src=RegData_652.js></script>
 <script src=RegData_653.js></script>
 <script src=RegData_654.js></script>
+<script src=RegData_655.js></script>
 
 <script>
 
