Updated data to 01/09/2022 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -689,6 +689,7 @@
 <script src=IntData_653.js></script>
 <script src=IntData_654.js></script>
 <script src=IntData_655.js></script>
+<script src=IntData_656.js></script>
 
 <script>
 
