--- a/covid19usa.html
+++ b/covid19usa.html
@@ -654,6 +654,7 @@
 <script src=USAData_653.js></script>
 <script src=USAData_654.js></script>
 <script src=USAData_655.js></script>
+<script src=USAData_656.js></script>
 <script>
 
 var MinLat = 25;
