--- a/covid19reg.html
+++ b/covid19reg.html
@@ -689,6 +689,7 @@
 <script src=RegData_653.js></script>
 <script src=RegData_654.js></script>
 <script src=RegData_655.js></script>
+<script src=RegData_656.js></script>
 
 <script>
 
