Updated data to 01/10/2022 + vaxdata (state vax data now has booster rates)

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -690,6 +690,7 @@
 <script src=RegData_654.js></script>
 <script src=RegData_655.js></script>
 <script src=RegData_656.js></script>
+<script src=RegData_657.js></script>
 
 <script>
 
