--- a/covid19state.html
+++ b/covid19state.html
@@ -632,6 +632,7 @@
 <script src=USAData_654.js></script>
 <script src=USAData_655.js></script>
 <script src=USAData_656.js></script>
+<script src=USAData_657.js></script>
 
 <script>
 
