Updated data to 01/11/2022 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -691,6 +691,7 @@
 <script src=IntData_655.js></script>
 <script src=IntData_656.js></script>
 <script src=IntData_657.js></script>
+<script src=IntData_658.js></script>
 
 <script>
 
