--- a/covid19reg.html
+++ b/covid19reg.html
@@ -691,6 +691,7 @@
 <script src=RegData_655.js></script>
 <script src=RegData_656.js></script>
 <script src=RegData_657.js></script>
+<script src=RegData_658.js></script>
 
 <script>
 
