--- a/covid19usa.html
+++ b/covid19usa.html
@@ -656,6 +656,7 @@
 <script src=USAData_655.js></script>
 <script src=USAData_656.js></script>
 <script src=USAData_657.js></script>
+<script src=USAData_658.js></script>
 <script>
 
 var MinLat = 25;
