--- a/covid19state.html
+++ b/covid19state.html
@@ -633,6 +633,7 @@
 <script src=USAData_655.js></script>
 <script src=USAData_656.js></script>
 <script src=USAData_657.js></script>
+<script src=USAData_658.js></script>
 
 <script>
 
