Updated data to 01/12/2022 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -692,6 +692,7 @@
 <script src=IntData_656.js></script>
 <script src=IntData_657.js></script>
 <script src=IntData_658.js></script>
+<script src=IntData_659.js></script>
 
 <script>
 
