--- a/covid19reg.html
+++ b/covid19reg.html
@@ -692,6 +692,7 @@
 <script src=RegData_656.js></script>
 <script src=RegData_657.js></script>
 <script src=RegData_658.js></script>
+<script src=RegData_659.js></script>
 
 <script>
 
