--- a/covid19usa.html
+++ b/covid19usa.html
@@ -657,6 +657,7 @@
 <script src=USAData_656.js></script>
 <script src=USAData_657.js></script>
 <script src=USAData_658.js></script>
+<script src=USAData_659.js></script>
 <script>
 
 var MinLat = 25;
