Updated data to 01/13/2022 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -693,6 +693,7 @@
 <script src=RegData_657.js></script>
 <script src=RegData_658.js></script>
 <script src=RegData_659.js></script>
+<script src=RegData_660.js></script>
 
 <script>
 
