--- a/covid19int.html
+++ b/covid19int.html
@@ -693,6 +693,7 @@
 <script src=IntData_657.js></script>
 <script src=IntData_658.js></script>
 <script src=IntData_659.js></script>
+<script src=IntData_660.js></script>
 
 <script>
 
