--- a/covid19state.html
+++ b/covid19state.html
@@ -635,6 +635,7 @@
 <script src=USAData_657.js></script>
 <script src=USAData_658.js></script>
 <script src=USAData_659.js></script>
+<script src=USAData_660.js></script>
 
 <script>
 
