--- a/covid19usa.html
+++ b/covid19usa.html
@@ -658,6 +658,7 @@
 <script src=USAData_657.js></script>
 <script src=USAData_658.js></script>
 <script src=USAData_659.js></script>
+<script src=USAData_660.js></script>
 <script>
 
 var MinLat = 25;
