Updated data to 01/15/2022 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -694,6 +694,8 @@
 <script src=IntData_658.js></script>
 <script src=IntData_659.js></script>
 <script src=IntData_660.js></script>
+<script src=IntData_661.js></script>
+<script src=IntData_662.js></script>
 
 <script>
 
