--- a/covid19reg.html
+++ b/covid19reg.html
@@ -694,6 +694,8 @@
 <script src=RegData_658.js></script>
 <script src=RegData_659.js></script>
 <script src=RegData_660.js></script>
+<script src=RegData_661.js></script>
+<script src=RegData_662.js></script>
 
 <script>
 
