--- a/covid19state.html
+++ b/covid19state.html
@@ -636,6 +636,8 @@
 <script src=USAData_658.js></script>
 <script src=USAData_659.js></script>
 <script src=USAData_660.js></script>
+<script src=USAData_661.js></script>
+<script src=USAData_662.js></script>
 
 <script>
 
