Updated data to 01/16/2022 + vaxdata

--- a/covid19state.html
+++ b/covid19state.html
@@ -638,6 +638,7 @@
 <script src=USAData_660.js></script>
 <script src=USAData_661.js></script>
 <script src=USAData_662.js></script>
+<script src=USAData_663.js></script>
 
 <script>
 
