--- a/covid19int.html
+++ b/covid19int.html
@@ -696,6 +696,7 @@
 <script src=IntData_660.js></script>
 <script src=IntData_661.js></script>
 <script src=IntData_662.js></script>
+<script src=IntData_663.js></script>
 
 <script>
 
