--- a/covid19reg.html
+++ b/covid19reg.html
@@ -696,6 +696,7 @@
 <script src=RegData_660.js></script>
 <script src=RegData_661.js></script>
 <script src=RegData_662.js></script>
+<script src=RegData_663.js></script>
 
 <script>
 
