--- a/covid19usa.html
+++ b/covid19usa.html
@@ -661,6 +661,7 @@
 <script src=USAData_660.js></script>
 <script src=USAData_661.js></script>
 <script src=USAData_662.js></script>
+<script src=USAData_663.js></script>
 <script>
 
 var MinLat = 25;
