Updated data to 01/17/2022 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -697,6 +697,7 @@
 <script src=IntData_661.js></script>
 <script src=IntData_662.js></script>
 <script src=IntData_663.js></script>
+<script src=IntData_664.js></script>
 
 <script>
 
