--- a/covid19usa.html
+++ b/covid19usa.html
@@ -662,6 +662,7 @@
 <script src=USAData_661.js></script>
 <script src=USAData_662.js></script>
 <script src=USAData_663.js></script>
+<script src=USAData_664.js></script>
 <script>
 
 var MinLat = 25;
