--- a/covid19reg.html
+++ b/covid19reg.html
@@ -697,6 +697,7 @@
 <script src=RegData_661.js></script>
 <script src=RegData_662.js></script>
 <script src=RegData_663.js></script>
+<script src=RegData_664.js></script>
 
 <script>
 
