Updated data to 01/18/2022 + VaxData

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -698,6 +698,7 @@
 <script src=RegData_662.js></script>
 <script src=RegData_663.js></script>
 <script src=RegData_664.js></script>
+<script src=RegData_665.js></script>
 
 <script>
 
