--- a/covid19int.html
+++ b/covid19int.html
@@ -698,6 +698,7 @@
 <script src=IntData_662.js></script>
 <script src=IntData_663.js></script>
 <script src=IntData_664.js></script>
+<script src=IntData_665.js></script>
 
 <script>
 
