Updated data to 01/19/2022 + VaxData

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -664,6 +664,7 @@
 <script src=USAData_663.js></script>
 <script src=USAData_664.js></script>
 <script src=USAData_665.js></script>
+<script src=USAData_666.js></script>
 <script>
 
 var MinLat = 25;
