--- a/covid19int.html
+++ b/covid19int.html
@@ -699,6 +699,7 @@
 <script src=IntData_663.js></script>
 <script src=IntData_664.js></script>
 <script src=IntData_665.js></script>
+<script src=IntData_666.js></script>
 
 <script>
 
