--- a/covid19reg.html
+++ b/covid19reg.html
@@ -699,6 +699,7 @@
 <script src=RegData_663.js></script>
 <script src=RegData_664.js></script>
 <script src=RegData_665.js></script>
+<script src=RegData_666.js></script>
 
 <script>
 
