--- a/covid19state.html
+++ b/covid19state.html
@@ -641,6 +641,7 @@
 <script src=USAData_663.js></script>
 <script src=USAData_664.js></script>
 <script src=USAData_665.js></script>
+<script src=USAData_666.js></script>
 
 <script>
 
