Updated data to 01/20/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -700,6 +700,7 @@
 <script src=IntData_664.js></script>
 <script src=IntData_665.js></script>
 <script src=IntData_666.js></script>
+<script src=IntData_667.js></script>
 
 <script>
 
