--- a/covid19usa.html
+++ b/covid19usa.html
@@ -665,6 +665,7 @@
 <script src=USAData_664.js></script>
 <script src=USAData_665.js></script>
 <script src=USAData_666.js></script>
+<script src=USAData_667.js></script>
 <script>
 
 var MinLat = 25;
