--- a/covid19reg.html
+++ b/covid19reg.html
@@ -700,6 +700,7 @@
 <script src=RegData_664.js></script>
 <script src=RegData_665.js></script>
 <script src=RegData_666.js></script>
+<script src=RegData_667.js></script>
 
 <script>
 
