--- a/covid19int.html
+++ b/covid19int.html
@@ -701,6 +701,7 @@
 <script src=IntData_665.js></script>
 <script src=IntData_666.js></script>
 <script src=IntData_667.js></script>
+<script src=IntData_668.js></script>
 
 <script>
 
