--- a/covid19reg.html
+++ b/covid19reg.html
@@ -701,6 +701,7 @@
 <script src=RegData_665.js></script>
 <script src=RegData_666.js></script>
 <script src=RegData_667.js></script>
+<script src=RegData_668.js></script>
 
 <script>
 
