--- a/covid19state.html
+++ b/covid19state.html
@@ -643,6 +643,7 @@
 <script src=USAData_665.js></script>
 <script src=USAData_666.js></script>
 <script src=USAData_667.js></script>
+<script src=USAData_668.js></script>
 
 <script>
 
