Updated data to 01/22/2022 + VaxData

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -702,6 +702,7 @@
 <script src=RegData_666.js></script>
 <script src=RegData_667.js></script>
 <script src=RegData_668.js></script>
+<script src=RegData_669.js></script>
 
 <script>
 
