--- a/covid19int.html
+++ b/covid19int.html
@@ -702,6 +702,7 @@
 <script src=IntData_666.js></script>
 <script src=IntData_667.js></script>
 <script src=IntData_668.js></script>
+<script src=IntData_669.js></script>
 
 <script>
 
