--- a/covid19state.html
+++ b/covid19state.html
@@ -644,6 +644,7 @@
 <script src=USAData_666.js></script>
 <script src=USAData_667.js></script>
 <script src=USAData_668.js></script>
+<script src=USAData_669.js></script>
 
 <script>
 
