Updated data to 01/23/2022 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -703,6 +703,7 @@
 <script src=RegData_667.js></script>
 <script src=RegData_668.js></script>
 <script src=RegData_669.js></script>
+<script src=RegData_670.js></script>
 
 <script>
 
