--- a/covid19usa.html
+++ b/covid19usa.html
@@ -668,6 +668,7 @@
 <script src=USAData_667.js></script>
 <script src=USAData_668.js></script>
 <script src=USAData_669.js></script>
+<script src=USAData_670.js></script>
 <script>
 
 var MinLat = 25;
