--- a/covid19int.html
+++ b/covid19int.html
@@ -703,6 +703,7 @@
 <script src=IntData_667.js></script>
 <script src=IntData_668.js></script>
 <script src=IntData_669.js></script>
+<script src=IntData_670.js></script>
 
 <script>
 
