Updated data to 01/24/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -704,6 +704,7 @@
 <script src=IntData_668.js></script>
 <script src=IntData_669.js></script>
 <script src=IntData_670.js></script>
+<script src=IntData_671.js></script>
 
 <script>
 
