--- a/covid19reg.html
+++ b/covid19reg.html
@@ -704,6 +704,7 @@
 <script src=RegData_668.js></script>
 <script src=RegData_669.js></script>
 <script src=RegData_670.js></script>
+<script src=RegData_671.js></script>
 
 <script>
 
