--- a/covid19state.html
+++ b/covid19state.html
@@ -646,6 +646,7 @@
 <script src=USAData_668.js></script>
 <script src=USAData_669.js></script>
 <script src=USAData_670.js></script>
+<script src=USAData_671.js></script>
 
 <script>
 
