--- a/covid19usa.html
+++ b/covid19usa.html
@@ -669,6 +669,7 @@
 <script src=USAData_668.js></script>
 <script src=USAData_669.js></script>
 <script src=USAData_670.js></script>
+<script src=USAData_671.js></script>
 <script>
 
 var MinLat = 25;
