Updated data to 01/25/2022 + Vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -705,6 +705,7 @@
 <script src=IntData_669.js></script>
 <script src=IntData_670.js></script>
 <script src=IntData_671.js></script>
+<script src=IntData_672.js></script>
 
 <script>
 
