--- a/covid19reg.html
+++ b/covid19reg.html
@@ -705,6 +705,7 @@
 <script src=RegData_669.js></script>
 <script src=RegData_670.js></script>
 <script src=RegData_671.js></script>
+<script src=RegData_672.js></script>
 
 <script>
 
