--- a/covid19int.html
+++ b/covid19int.html
@@ -706,6 +706,7 @@
 <script src=IntData_670.js></script>
 <script src=IntData_671.js></script>
 <script src=IntData_672.js></script>
+<script src=IntData_673.js></script>
 
 <script>
 
