--- a/covid19reg.html
+++ b/covid19reg.html
@@ -706,6 +706,7 @@
 <script src=RegData_670.js></script>
 <script src=RegData_671.js></script>
 <script src=RegData_672.js></script>
+<script src=RegData_673.js></script>
 
 <script>
 
