--- a/covid19state.html
+++ b/covid19state.html
@@ -648,6 +648,7 @@
 <script src=USAData_670.js></script>
 <script src=USAData_671.js></script>
 <script src=USAData_672.js></script>
+<script src=USAData_673.js></script>
 
 <script>
 
