--- a/covid19usa.html
+++ b/covid19usa.html
@@ -671,6 +671,7 @@
 <script src=USAData_670.js></script>
 <script src=USAData_671.js></script>
 <script src=USAData_672.js></script>
+<script src=USAData_673.js></script>
 <script>
 
 var MinLat = 25;
