Updated data to 01/27/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -707,6 +707,7 @@
 <script src=IntData_671.js></script>
 <script src=IntData_672.js></script>
 <script src=IntData_673.js></script>
+<script src=IntData_674.js></script>
 
 <script>
 
