--- a/covid19reg.html
+++ b/covid19reg.html
@@ -707,6 +707,7 @@
 <script src=RegData_671.js></script>
 <script src=RegData_672.js></script>
 <script src=RegData_673.js></script>
+<script src=RegData_674.js></script>
 
 <script>
 
