--- a/covid19state.html
+++ b/covid19state.html
@@ -649,6 +649,7 @@
 <script src=USAData_671.js></script>
 <script src=USAData_672.js></script>
 <script src=USAData_673.js></script>
+<script src=USAData_674.js></script>
 
 <script>
 
