Updated data to 01/28/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -708,6 +708,7 @@
 <script src=IntData_672.js></script>
 <script src=IntData_673.js></script>
 <script src=IntData_674.js></script>
+<script src=IntData_675.js></script>
 
 <script>
 
