--- a/covid19state.html
+++ b/covid19state.html
@@ -650,6 +650,7 @@
 <script src=USAData_672.js></script>
 <script src=USAData_673.js></script>
 <script src=USAData_674.js></script>
+<script src=USAData_675.js></script>
 
 <script>
 
