--- a/covid19reg.html
+++ b/covid19reg.html
@@ -708,6 +708,7 @@
 <script src=RegData_672.js></script>
 <script src=RegData_673.js></script>
 <script src=RegData_674.js></script>
+<script src=RegData_675.js></script>
 
 <script>
 
