--- a/covid19int.html
+++ b/covid19int.html
@@ -709,6 +709,7 @@
 <script src=IntData_673.js></script>
 <script src=IntData_674.js></script>
 <script src=IntData_675.js></script>
+<script src=IntData_676.js></script>
 
 <script>
 
