--- a/covid19reg.html
+++ b/covid19reg.html
@@ -709,6 +709,7 @@
 <script src=RegData_673.js></script>
 <script src=RegData_674.js></script>
 <script src=RegData_675.js></script>
+<script src=RegData_676.js></script>
 
 <script>
 
