--- a/covid19state.html
+++ b/covid19state.html
@@ -651,6 +651,7 @@
 <script src=USAData_673.js></script>
 <script src=USAData_674.js></script>
 <script src=USAData_675.js></script>
+<script src=USAData_676.js></script>
 
 <script>
 
