Updated data to 01/30/2022 + VaxData

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -710,6 +710,7 @@
 <script src=RegData_674.js></script>
 <script src=RegData_675.js></script>
 <script src=RegData_676.js></script>
+<script src=RegData_677.js></script>
 
 <script>
 
