--- a/covid19int.html
+++ b/covid19int.html
@@ -710,6 +710,7 @@
 <script src=IntData_674.js></script>
 <script src=IntData_675.js></script>
 <script src=IntData_676.js></script>
+<script src=IntData_677.js></script>
 
 <script>
 
