Updated data to 01/31/2022 + VaxData

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -711,6 +711,7 @@
 <script src=RegData_675.js></script>
 <script src=RegData_676.js></script>
 <script src=RegData_677.js></script>
+<script src=RegData_678.js></script>
 
 <script>
 
