--- a/covid19state.html
+++ b/covid19state.html
@@ -653,6 +653,7 @@
 <script src=USAData_675.js></script>
 <script src=USAData_676.js></script>
 <script src=USAData_677.js></script>
+<script src=USAData_678.js></script>
 
 <script>
 
