--- a/covid19int.html
+++ b/covid19int.html
@@ -711,6 +711,7 @@
 <script src=IntData_675.js></script>
 <script src=IntData_676.js></script>
 <script src=IntData_677.js></script>
+<script src=IntData_678.js></script>
 
 <script>
 
