Updated data to 02/01/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -712,6 +712,7 @@
 <script src=IntData_676.js></script>
 <script src=IntData_677.js></script>
 <script src=IntData_678.js></script>
+<script src=IntData_679.js></script>
 
 <script>
 
