--- a/covid19reg.html
+++ b/covid19reg.html
@@ -712,6 +712,7 @@
 <script src=RegData_676.js></script>
 <script src=RegData_677.js></script>
 <script src=RegData_678.js></script>
+<script src=RegData_679.js></script>
 
 <script>
 
