--- a/covid19state.html
+++ b/covid19state.html
@@ -654,6 +654,7 @@
 <script src=USAData_676.js></script>
 <script src=USAData_677.js></script>
 <script src=USAData_678.js></script>
+<script src=USAData_679.js></script>
 
 <script>
 
