--- a/covid19usa.html
+++ b/covid19usa.html
@@ -677,6 +677,7 @@
 <script src=USAData_676.js></script>
 <script src=USAData_677.js></script>
 <script src=USAData_678.js></script>
+<script src=USAData_679.js></script>
 <script>
 
 var MinLat = 25;
