Updated data to 02/02/2022 + Vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -713,6 +713,7 @@
 <script src=IntData_677.js></script>
 <script src=IntData_678.js></script>
 <script src=IntData_679.js></script>
+<script src=IntData_680.js></script>
 
 <script>
 
