--- a/covid19reg.html
+++ b/covid19reg.html
@@ -713,6 +713,7 @@
 <script src=RegData_677.js></script>
 <script src=RegData_678.js></script>
 <script src=RegData_679.js></script>
+<script src=RegData_680.js></script>
 
 <script>
 
