--- a/covid19state.html
+++ b/covid19state.html
@@ -655,6 +655,7 @@
 <script src=USAData_677.js></script>
 <script src=USAData_678.js></script>
 <script src=USAData_679.js></script>
+<script src=USAData_680.js></script>
 
 <script>
 
