--- a/covid19usa.html
+++ b/covid19usa.html
@@ -678,6 +678,7 @@
 <script src=USAData_677.js></script>
 <script src=USAData_678.js></script>
 <script src=USAData_679.js></script>
+<script src=USAData_680.js></script>
 <script>
 
 var MinLat = 25;
