Updated data to 02/03/2022 + Vaxdata

--- a/covid19state.html
+++ b/covid19state.html
@@ -656,6 +656,7 @@
 <script src=USAData_678.js></script>
 <script src=USAData_679.js></script>
 <script src=USAData_680.js></script>
+<script src=USAData_681.js></script>
 
 <script>
 
