--- a/covid19int.html
+++ b/covid19int.html
@@ -714,6 +714,7 @@
 <script src=IntData_678.js></script>
 <script src=IntData_679.js></script>
 <script src=IntData_680.js></script>
+<script src=IntData_681.js></script>
 
 <script>
 
