--- a/covid19reg.html
+++ b/covid19reg.html
@@ -714,6 +714,7 @@
 <script src=RegData_678.js></script>
 <script src=RegData_679.js></script>
 <script src=RegData_680.js></script>
+<script src=RegData_681.js></script>
 
 <script>
 
