--- a/covid19usa.html
+++ b/covid19usa.html
@@ -679,6 +679,7 @@
 <script src=USAData_678.js></script>
 <script src=USAData_679.js></script>
 <script src=USAData_680.js></script>
+<script src=USAData_681.js></script>
 <script>
 
 var MinLat = 25;
