Updated data to 02/04/2022 + VaxData

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -680,6 +680,7 @@
 <script src=USAData_679.js></script>
 <script src=USAData_680.js></script>
 <script src=USAData_681.js></script>
+<script src=USAData_682.js></script>
 <script>
 
 var MinLat = 25;
