--- a/covid19int.html
+++ b/covid19int.html
@@ -715,6 +715,7 @@
 <script src=IntData_679.js></script>
 <script src=IntData_680.js></script>
 <script src=IntData_681.js></script>
+<script src=IntData_682.js></script>
 
 <script>
 
