--- a/covid19reg.html
+++ b/covid19reg.html
@@ -715,6 +715,7 @@
 <script src=RegData_679.js></script>
 <script src=RegData_680.js></script>
 <script src=RegData_681.js></script>
+<script src=RegData_682.js></script>
 
 <script>
 
