--- a/covid19state.html
+++ b/covid19state.html
@@ -657,6 +657,7 @@
 <script src=USAData_679.js></script>
 <script src=USAData_680.js></script>
 <script src=USAData_681.js></script>
+<script src=USAData_682.js></script>
 
 <script>
 
