Updated data to 02/05/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -716,6 +716,7 @@
 <script src=IntData_680.js></script>
 <script src=IntData_681.js></script>
 <script src=IntData_682.js></script>
+<script src=IntData_683.js></script>
 
 <script>
 
