--- a/covid19reg.html
+++ b/covid19reg.html
@@ -716,6 +716,7 @@
 <script src=RegData_680.js></script>
 <script src=RegData_681.js></script>
 <script src=RegData_682.js></script>
+<script src=RegData_683.js></script>
 
 <script>
 
