--- a/covid19state.html
+++ b/covid19state.html
@@ -658,6 +658,7 @@
 <script src=USAData_680.js></script>
 <script src=USAData_681.js></script>
 <script src=USAData_682.js></script>
+<script src=USAData_683.js></script>
 
 <script>
 
