--- a/covid19usa.html
+++ b/covid19usa.html
@@ -681,6 +681,7 @@
 <script src=USAData_680.js></script>
 <script src=USAData_681.js></script>
 <script src=USAData_682.js></script>
+<script src=USAData_683.js></script>
 <script>
 
 var MinLat = 25;
