Updated data to 02/06/2022 + VaxData

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -717,6 +717,7 @@
 <script src=RegData_681.js></script>
 <script src=RegData_682.js></script>
 <script src=RegData_683.js></script>
+<script src=RegData_684.js></script>
 
 <script>
 
