--- a/covid19usa.html
+++ b/covid19usa.html
@@ -682,6 +682,7 @@
 <script src=USAData_681.js></script>
 <script src=USAData_682.js></script>
 <script src=USAData_683.js></script>
+<script src=USAData_684.js></script>
 <script>
 
 var MinLat = 25;
