--- a/covid19int.html
+++ b/covid19int.html
@@ -717,6 +717,7 @@
 <script src=IntData_681.js></script>
 <script src=IntData_682.js></script>
 <script src=IntData_683.js></script>
+<script src=IntData_684.js></script>
 
 <script>
 
