Updated data to 02/07/2022 + VaxData

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -718,6 +718,7 @@
 <script src=RegData_682.js></script>
 <script src=RegData_683.js></script>
 <script src=RegData_684.js></script>
+<script src=RegData_685.js></script>
 
 <script>
 
