--- a/covid19int.html
+++ b/covid19int.html
@@ -718,6 +718,7 @@
 <script src=IntData_682.js></script>
 <script src=IntData_683.js></script>
 <script src=IntData_684.js></script>
+<script src=IntData_685.js></script>
 
 <script>
 
