--- a/covid19state.html
+++ b/covid19state.html
@@ -660,6 +660,7 @@
 <script src=USAData_682.js></script>
 <script src=USAData_683.js></script>
 <script src=USAData_684.js></script>
+<script src=USAData_685.js></script>
 
 <script>
 
