Updated data to 02/08/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -719,6 +719,7 @@
 <script src=IntData_683.js></script>
 <script src=IntData_684.js></script>
 <script src=IntData_685.js></script>
+<script src=IntData_686.js></script>
 
 <script>
 
