--- a/covid19reg.html
+++ b/covid19reg.html
@@ -719,6 +719,7 @@
 <script src=RegData_683.js></script>
 <script src=RegData_684.js></script>
 <script src=RegData_685.js></script>
+<script src=RegData_686.js></script>
 
 <script>
 
