--- a/covid19state.html
+++ b/covid19state.html
@@ -661,6 +661,7 @@
 <script src=USAData_683.js></script>
 <script src=USAData_684.js></script>
 <script src=USAData_685.js></script>
+<script src=USAData_686.js></script>
 
 <script>
 
