Updated data to 02/09/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -720,6 +720,7 @@
 <script src=IntData_684.js></script>
 <script src=IntData_685.js></script>
 <script src=IntData_686.js></script>
+<script src=IntData_687.js></script>
 
 <script>
 
