--- a/covid19state.html
+++ b/covid19state.html
@@ -662,6 +662,7 @@
 <script src=USAData_684.js></script>
 <script src=USAData_685.js></script>
 <script src=USAData_686.js></script>
+<script src=USAData_687.js></script>
 
 <script>
 
