--- a/covid19reg.html
+++ b/covid19reg.html
@@ -720,6 +720,7 @@
 <script src=RegData_684.js></script>
 <script src=RegData_685.js></script>
 <script src=RegData_686.js></script>
+<script src=RegData_687.js></script>
 
 <script>
 
