--- a/covid19usa.html
+++ b/covid19usa.html
@@ -685,6 +685,7 @@
 <script src=USAData_684.js></script>
 <script src=USAData_685.js></script>
 <script src=USAData_686.js></script>
+<script src=USAData_687.js></script>
 <script>
 
 var MinLat = 25;
