Updated data to 02/10/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -721,6 +721,7 @@
 <script src=IntData_685.js></script>
 <script src=IntData_686.js></script>
 <script src=IntData_687.js></script>
+<script src=IntData_688.js></script>
 
 <script>
 
