--- a/covid19usa.html
+++ b/covid19usa.html
@@ -686,6 +686,7 @@
 <script src=USAData_685.js></script>
 <script src=USAData_686.js></script>
 <script src=USAData_687.js></script>
+<script src=USAData_688.js></script>
 <script>
 
 var MinLat = 25;
