--- a/covid19reg.html
+++ b/covid19reg.html
@@ -721,6 +721,7 @@
 <script src=RegData_685.js></script>
 <script src=RegData_686.js></script>
 <script src=RegData_687.js></script>
+<script src=RegData_688.js></script>
 
 <script>
 
