--- a/covid19state.html
+++ b/covid19state.html
@@ -663,6 +663,7 @@
 <script src=USAData_685.js></script>
 <script src=USAData_686.js></script>
 <script src=USAData_687.js></script>
+<script src=USAData_688.js></script>
 
 <script>
 
