--- a/covid19int.html
+++ b/covid19int.html
@@ -722,6 +722,7 @@
 <script src=IntData_686.js></script>
 <script src=IntData_687.js></script>
 <script src=IntData_688.js></script>
+<script src=IntData_689.js></script>
 
 <script>
 
