--- a/covid19reg.html
+++ b/covid19reg.html
@@ -722,6 +722,7 @@
 <script src=RegData_686.js></script>
 <script src=RegData_687.js></script>
 <script src=RegData_688.js></script>
+<script src=RegData_689.js></script>
 
 <script>
 
