Updated data to 02/12/2022 + VaxData

--- a/covid19state.html
+++ b/covid19state.html
@@ -665,6 +665,7 @@
 <script src=USAData_687.js></script>
 <script src=USAData_688.js></script>
 <script src=USAData_689.js></script>
+<script src=USAData_690.js></script>
 
 <script>
 
