--- a/covid19int.html
+++ b/covid19int.html
@@ -723,6 +723,7 @@
 <script src=IntData_687.js></script>
 <script src=IntData_688.js></script>
 <script src=IntData_689.js></script>
+<script src=IntData_690.js></script>
 
 <script>
 
