--- a/covid19reg.html
+++ b/covid19reg.html
@@ -723,6 +723,7 @@
 <script src=RegData_687.js></script>
 <script src=RegData_688.js></script>
 <script src=RegData_689.js></script>
+<script src=RegData_690.js></script>
 
 <script>
 
