--- a/covid19usa.html
+++ b/covid19usa.html
@@ -688,6 +688,7 @@
 <script src=USAData_687.js></script>
 <script src=USAData_688.js></script>
 <script src=USAData_689.js></script>
+<script src=USAData_690.js></script>
 <script>
 
 var MinLat = 25;
