Updated data to 02/13/2022 + VaxData

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -724,6 +724,7 @@
 <script src=RegData_688.js></script>
 <script src=RegData_689.js></script>
 <script src=RegData_690.js></script>
+<script src=RegData_691.js></script>
 
 <script>
 
