--- a/covid19int.html
+++ b/covid19int.html
@@ -724,6 +724,7 @@
 <script src=IntData_688.js></script>
 <script src=IntData_689.js></script>
 <script src=IntData_690.js></script>
+<script src=IntData_691.js></script>
 
 <script>
 
