--- a/covid19state.html
+++ b/covid19state.html
@@ -666,6 +666,7 @@
 <script src=USAData_688.js></script>
 <script src=USAData_689.js></script>
 <script src=USAData_690.js></script>
+<script src=USAData_691.js></script>
 
 <script>
 
