Updated data to 02/14/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -725,6 +725,7 @@
 <script src=IntData_689.js></script>
 <script src=IntData_690.js></script>
 <script src=IntData_691.js></script>
+<script src=IntData_692.js></script>
 
 <script>
 
