--- a/covid19reg.html
+++ b/covid19reg.html
@@ -725,6 +725,7 @@
 <script src=RegData_689.js></script>
 <script src=RegData_690.js></script>
 <script src=RegData_691.js></script>
+<script src=RegData_692.js></script>
 
 <script>
 
