--- a/covid19state.html
+++ b/covid19state.html
@@ -667,6 +667,7 @@
 <script src=USAData_689.js></script>
 <script src=USAData_690.js></script>
 <script src=USAData_691.js></script>
+<script src=USAData_692.js></script>
 
 <script>
 
