--- a/covid19usa.html
+++ b/covid19usa.html
@@ -690,6 +690,7 @@
 <script src=USAData_689.js></script>
 <script src=USAData_690.js></script>
 <script src=USAData_691.js></script>
+<script src=USAData_692.js></script>
 <script>
 
 var MinLat = 25;
