Updated data to 02/15/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -726,6 +726,7 @@
 <script src=IntData_690.js></script>
 <script src=IntData_691.js></script>
 <script src=IntData_692.js></script>
+<script src=IntData_693.js></script>
 
 <script>
 
