--- a/covid19reg.html
+++ b/covid19reg.html
@@ -726,6 +726,7 @@
 <script src=RegData_690.js></script>
 <script src=RegData_691.js></script>
 <script src=RegData_692.js></script>
+<script src=RegData_693.js></script>
 
 <script>
 
