--- a/covid19state.html
+++ b/covid19state.html
@@ -668,6 +668,7 @@
 <script src=USAData_690.js></script>
 <script src=USAData_691.js></script>
 <script src=USAData_692.js></script>
+<script src=USAData_693.js></script>
 
 <script>
 
