--- a/covid19int.html
+++ b/covid19int.html
@@ -727,6 +727,7 @@
 <script src=IntData_691.js></script>
 <script src=IntData_692.js></script>
 <script src=IntData_693.js></script>
+<script src=IntData_694.js></script>
 
 <script>
 
