--- a/covid19reg.html
+++ b/covid19reg.html
@@ -727,6 +727,7 @@
 <script src=RegData_691.js></script>
 <script src=RegData_692.js></script>
 <script src=RegData_693.js></script>
+<script src=RegData_694.js></script>
 
 <script>
 
