--- a/covid19state.html
+++ b/covid19state.html
@@ -669,6 +669,7 @@
 <script src=USAData_691.js></script>
 <script src=USAData_692.js></script>
 <script src=USAData_693.js></script>
+<script src=USAData_694.js></script>
 
 <script>
 
