Updated data to 02/17/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -728,6 +728,7 @@
 <script src=IntData_692.js></script>
 <script src=IntData_693.js></script>
 <script src=IntData_694.js></script>
+<script src=IntData_695.js></script>
 
 <script>
 
