--- a/covid19state.html
+++ b/covid19state.html
@@ -670,6 +670,7 @@
 <script src=USAData_692.js></script>
 <script src=USAData_693.js></script>
 <script src=USAData_694.js></script>
+<script src=USAData_695.js></script>
 
 <script>
 
