--- a/covid19reg.html
+++ b/covid19reg.html
@@ -728,6 +728,7 @@
 <script src=RegData_692.js></script>
 <script src=RegData_693.js></script>
 <script src=RegData_694.js></script>
+<script src=RegData_695.js></script>
 
 <script>
 
