--- a/covid19usa.html
+++ b/covid19usa.html
@@ -693,6 +693,7 @@
 <script src=USAData_692.js></script>
 <script src=USAData_693.js></script>
 <script src=USAData_694.js></script>
+<script src=USAData_695.js></script>
 <script>
 
 var MinLat = 25;
