Updated data to 02/18/2022 + VaxData

--- a/covid19state.html
+++ b/covid19state.html
@@ -671,6 +671,7 @@
 <script src=USAData_693.js></script>
 <script src=USAData_694.js></script>
 <script src=USAData_695.js></script>
+<script src=USAData_696.js></script>
 
 <script>
 
