--- a/covid19int.html
+++ b/covid19int.html
@@ -729,6 +729,7 @@
 <script src=IntData_693.js></script>
 <script src=IntData_694.js></script>
 <script src=IntData_695.js></script>
+<script src=IntData_696.js></script>
 
 <script>
 
