--- a/covid19reg.html
+++ b/covid19reg.html
@@ -729,6 +729,7 @@
 <script src=RegData_693.js></script>
 <script src=RegData_694.js></script>
 <script src=RegData_695.js></script>
+<script src=RegData_696.js></script>
 
 <script>
 
