--- a/covid19usa.html
+++ b/covid19usa.html
@@ -694,6 +694,7 @@
 <script src=USAData_693.js></script>
 <script src=USAData_694.js></script>
 <script src=USAData_695.js></script>
+<script src=USAData_696.js></script>
 <script>
 
 var MinLat = 25;
