Updated data to 02/19/2022 + VaxData

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -730,6 +730,7 @@
 <script src=RegData_694.js></script>
 <script src=RegData_695.js></script>
 <script src=RegData_696.js></script>
+<script src=RegData_697.js></script>
 
 <script>
 
