--- a/covid19int.html
+++ b/covid19int.html
@@ -730,6 +730,7 @@
 <script src=IntData_694.js></script>
 <script src=IntData_695.js></script>
 <script src=IntData_696.js></script>
+<script src=IntData_697.js></script>
 
 <script>
 
