--- a/covid19usa.html
+++ b/covid19usa.html
@@ -695,6 +695,7 @@
 <script src=USAData_694.js></script>
 <script src=USAData_695.js></script>
 <script src=USAData_696.js></script>
+<script src=USAData_697.js></script>
 <script>
 
 var MinLat = 25;
