Updated data to 02/20/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -731,6 +731,7 @@
 <script src=IntData_695.js></script>
 <script src=IntData_696.js></script>
 <script src=IntData_697.js></script>
+<script src=IntData_698.js></script>
 
 <script>
 
