--- a/covid19reg.html
+++ b/covid19reg.html
@@ -731,6 +731,7 @@
 <script src=RegData_695.js></script>
 <script src=RegData_696.js></script>
 <script src=RegData_697.js></script>
+<script src=RegData_698.js></script>
 
 <script>
 
