--- a/covid19usa.html
+++ b/covid19usa.html
@@ -696,6 +696,7 @@
 <script src=USAData_695.js></script>
 <script src=USAData_696.js></script>
 <script src=USAData_697.js></script>
+<script src=USAData_698.js></script>
 <script>
 
 var MinLat = 25;
