--- a/covid19state.html
+++ b/covid19state.html
@@ -673,6 +673,7 @@
 <script src=USAData_695.js></script>
 <script src=USAData_696.js></script>
 <script src=USAData_697.js></script>
+<script src=USAData_698.js></script>
 
 <script>
 
